[package]
name = "documents"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
fable_library_rust = { path = "../../../polyglot/lib/rust/fable/fable_modules/fable-library-rust", default-features = false, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
inline_colorization = "~0.1"
regex = "~1.10"
clap = "~4.5"
chrono = "~0.4"
async-std = "~1.12"
futures = "~0.3"
futures-lite = "~2.3"
async-walkdir = "~1.0"
rayon = "~1.10"
sha2 = "~0.11.0-pre.3"

[dev-dependencies]

[lib]
path = "documents.rs"

[[bin]]
name = "documents"
path = "main.rs"
